tests/baselines/reference/parserLabeledStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserLabeledStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserLabeledStatement1.d.ts(1,1): error TS7028: Unused label.
tests/cases/conformance/parser/ecmascript5/Statements/parserLabeledStatement1.d.ts(2,3): error TS2304: Cannot find name 'bar'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserLabeledStatement1.d.ts (3 errors) ====
    foo:
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    ~~~
!!! error TS7028: Unused label.
      bar();
      ~~~
!!! error TS2304: Cannot find name 'bar'.